--- a/viewall.html
+++ b/viewall.html
@@ -10,10 +10,35 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Mission Hospital</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Patient Entry</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="search.html">Search</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="delete.html">Delete</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="viewall.html">View list </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav> 
+      <h1><center>Patient List</center></h1> 
     <div class="container">
         <div class="row">
             <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                <table class="table">
+                <table class="table" border="5">
                     <thead>
                       <tr>
                         <th>Sl no</th>
